--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,16 +2,12 @@ trigger:
 - '*'
 
 pool:
-  name: 'Default'
-
-variables:
-  buildConfiguration: 'Release'
+  name: 'Default' #replace if needed with name of your agent pool
 
 steps:
 - task: UseDotNet@2
   displayName: 'Use .NET SDK 6.x'
   inputs:
-    packageType: sdk
     version: '6.x'
 
 - task: Npm@1
@@ -37,7 +33,7 @@ steps:
 
 - task: DotNetCoreCLI@2
   displayName: 'Build the project - Release'
-  inputs: 
+  inputs:
     command: 'build'
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
@@ -48,9 +44,9 @@ steps:
     command: 'publish'
     projects: '**/*.csproj'
     publishWebProjects: false
-    argument: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+    arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
     zipAfterPublish: true
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
-  condition: succeed()
+  condition: succeeded()
